--- a/homepage.html
+++ b/homepage.html
@@ -11,23 +11,23 @@
 		<div class="banner1">
 			<p class="sizep">帮5买，享帮帮</p>
 			<div class="imgbanner">
-				<img  src="img./common_min.png" style="position:relative;top:-28px;bottom:5px">
+				<img  src="./img/common_min.png" style="position:relative;top:-28px;bottom:5px">
 			</div>
 			<div class="imgbanner">
-				<img  src="img./common_min.png" style="position:relative;top:-50px;bottom:5px">
+				<img  src="./img/common_min.png" style="position:relative;top:-50px;bottom:5px">
 			</div>
 			<div class="imgbanner">
-				<img  src="img./common_min.png" style="position:relative;top:-72px;bottom:5px">
+				<img  src="./img/common_min.png" style="position:relative;top:-72px;bottom:5px">
 			</div>
 			<p class="sizep" style="width:41px;padding-top:6px;"><a style="color:#9a9791;" href=""> 登录 </a></p>
 			<p class="sizep" style="width:41px;padding-top:6px;"><a style="color:#9a9791;" href=""> 注册 </a></p>
 			<div class="imgbanner" style="margin:2px 2px 0px 0px ">
-				<img src="img./common_min.png" style="position:relative;top:-111px;bottom:5px">
+				<img src="./img/common_min.png" style="position:relative;top:-111px;bottom:5px">
 			</div>
 			<p class="sizep" style="width:45px;padding-top:6px; float:left">
 				<a style="color:#9a9791;" href=""> 消息 </a>
 			</p>
-			<img src="img./dingdan.jpg" style="margin-top:6px;float:left">
+			<img src="./img/dingdan.jpg" style="margin-top:6px;float:left">
 			<p class="sizep" style="width:64px;padding-top:6px; float:left">
 				<a style="color:#9a9791;" href=""> 我的订单 </a>
 			</p>
@@ -36,36 +36,36 @@
 			</p>
 			<p class="sizep" style="width:64px;padding-top:6px; float:left">
 				<a style="color:#9a9791;" href=""> 帮钻兑换 </a></p>
-			<img src="img./tp-my-phone.png" style="margin-top:6px;float:left">
+			<img src="./img/tp-my-phone.png" style="margin-top:6px;float:left">
 			<p class="sizep" style="width:55px;padding-top:6px; float:left">
 				<a style="color:#9a9791;" href=""> 手机版 </a></p>
 			<p class="sizep" style="width:55px;padding-top:6px; float:left">
 				<a style="color:#9a9791;" href=""> 帮5淘 </a></p>
 			<p class="sizep" style="width:55px;padding-top:6px; float:left">
 				<a style="color:#9a9791;" href=""> 客户服务 </a></p>
-			<img src="img./gouwuche.jpg" style="margin:6px 5px 2px 3px;float:left">	
+			<img src="./img/gouwuche.jpg" style="margin:6px 5px 2px 3px;float:left">	
 			<p class="sizep" style="width:45px;padding-top:6px; float:left">
 				<a style="color:#9a9791;" href=""> 购物车 </a></p>
 			<p style="padding-top:6px; color:#fe6c00;font-size:10px; font-weight:bold;float:left">0</p>
 
 			<div class="banner1-1">
-				<img src="img./logo_03.jpg" style="margin-top:10px;margin-right:108px;float:left;">
+				<img src="./img/logo_03.jpg" style="margin-top:10px;margin-right:108px;float:left;">
 				<div class="search" >
 					<input class="search2" type="text" value="输入商品网址或关键字，直通全网，块速帮5购！">
 					<button class="search1"> <a style="color:white; font-size: 17px;" href="">搜全网</a> </button>
 				</div>
 				<div class="banner1-2" style="border-right:0px">
 					<div class="imgbanner" style="margin-left:26px;">
-					<img  src="img./common_min.png" style="position:relative;top:-94px;bottom:5px ;"></div>
+					<img  src="./img/common_min.png" style="position:relative;top:-94px;bottom:5px ;"></div>
 					<p class="banner1-3">400-085-0505</p>
 				</div>
 				<div class="banner1-2" style="border-right:0px">
 					<div class="imgbanner" style="margin-left:26px;" >
-					<img  src="img./common_min.png" style="position:relative;top:-111px;bottom:5px ;"></div>
+					<img  src="./img/common_min.png" style="position:relative;top:-111px;bottom:5px ;"></div>
 					<p class="banner1-3">mc@b5m.com</p>
 				</div>
 				<div class="banner1-2" style="background-color:#fe6c00;border:1px solid #fe6c00;">
-					<img style="margin:15px 2px 0px 3px ;float:left;" src="img./wenhao.jpg">
+					<img style="margin:15px 2px 0px 3px ;float:left;" src="./img/wenhao.jpg">
 					<p style="margin:11px 0px;"><a style="color:white;font-size:14px;" href="">常见问题</a> </p>
 				</div>
 
@@ -97,7 +97,7 @@
 				<li><a href="">韩国馆</a></li>
 				<li><a href="">帮社区</a></li>
 				<li><a href="">1元兑奖</a></li>
-				<img src="img./hot.gif">
+				<img src="./img/hot.gif">
 			</div>
 		</div>
 	</div>
@@ -126,11 +126,11 @@
 					<li><a href="">科技</a></li><li><a href="">教育</a></li>
 				</div>
 				<div class="body1-4">
-					<img src="img./dd_03.jpg">
+					<img src="./img/dd_03.jpg">
 					<p>什么是帮5购</p>
-					<img src="img./dd_06.jpg">
+					<img src="./img/dd_06.jpg">
 					<p>帮5购提供什么服务</p>
-					<img src="img./dd_08.jpg">
+					<img src="./img/dd_08.jpg">
 					<p>如何开通帮5购服务</p>
 				</div>
 			</div>
@@ -148,12 +148,12 @@
 				</div>
 				<span id="left">
 					<div class="imgleft">
-						<img src="img./btn.gif">
+						<img src="./img/btn.gif">
 					</div>
 				</span>
 				<span id="right">
 					<div class="imgleft">
-						<img style="position:relative;top:-60px;" src="img./btn.gif">
+						<img style="position:relative;top:-60px;" src="./img/btn.gif">
 					</div>
 				</span>
 				<ul class="nav" id="nav">
@@ -168,9 +168,9 @@
 	<!-- 《------轮播图结束-------》 -->
 			<div class="body3-1">
 				<div class="body3-2">
-					<img src="img./ico-notice.png">
+					<img src="./img/ico-notice.png">
 					<p style="float:left;color:#fe6c00;width:130px;font-weight:bold">帮帮快讯</p>
-					<img style="margin-top:8px;" src="img./jiantou.jpg">
+					<img style="margin-top:8px;" src="./img/jiantou.jpg">
 				</div>
 				<div class="body3-3" id="scroll">
 					<div id="inner1" >
@@ -192,14 +192,14 @@
 				</div>
 			</div>
 			<div class="body2-2">
-				<img src="img./1(1).jpg">
-				<img src="img./2.jpg">
-				<img src="img./3(1).png">
-				<a href="details.html"><img src="img./qqq.png" ></a>
+				<img src="./img/1(1).jpg">
+				<img src="./img/2.jpg">
+				<img src="./img/3(1).png">
+				<a href="details.html"><img src="./img/qqq.png" ></a>
 			</div>
 			<div class="body4-1">
 				<div class="body4-2">
-					<img style="float:left;margin-right:8px;" src="img./phone.png">
+					<img style="float:left;margin-right:8px;" src="./img/phone.png">
 					<p style="float:left;font-size:14px;">话费充值</p>
 					<p style="float:left;font-size:13px;color:#ff4d04;">（可使用超级帮钻）</p>
 				</div>
@@ -220,7 +220,7 @@
 	</div>
 	<div class="bottom">
 		<div class="bottom1">
-			<img style="float:left;" src="img./loginB.jpg">
+			<img style="float:left;" src="./img/loginB.jpg">
 			<div class="bottom1-1">
 				<div class="bottom1-2">
 					<li style="font-size:16px;color:black;">购物指南</li>
@@ -286,13 +286,13 @@
 				<p class="bottom2-2" style="margin-left:57px;">增值电信业务经营许可证：沪B2-20130065号 |中华人民共和国互联网药品信息服务资格证书（沪） -非经营性-2013-0034 沪卫（中医）网审【2015】10032号 沪ICP备1134776号-3 | 食品流通许可证：</p>
 				<p class="bottom2-2" style="margin-left:526px;margin-bottom:5px;">SP31011514103101755</p>
 				<div class="bottom3">
-					<img src="img./bo1.gif">
-					<img src="img./bo2.png">
-					<img src="img./bo3.gif">
-					<img src="img./bo4.png">
-					<img src="img./bo5.png">
-					<img src="img./bo6.png">
-					<img src="img./bo7.png">
+					<img src="./img/bo1.gif">
+					<img src="./img/bo2.png">
+					<img src="./img/bo3.gif">
+					<img src="./img/bo4.png">
+					<img src="./img/bo5.png">
+					<img src="./img/bo6.png">
+					<img src="./img/bo7.png">
 				</div>
 			</div>
 			
@@ -317,22 +317,22 @@
 	var img5=document.createElement('img');
 	var img6=document.createElement('img');
 	var img7=document.createElement('img');
-	img1.src='img./consult-s.png';
-	img2.src='img./xiaobang.png';
+	img1.src='./img/consult-s.png';
+	img2.src='./img/xiaobang.png';
 	img1.style.float='left';
 	img2.style.float='left';
-	img3.src='img./youhui.png';
+	img3.src='./img/youhui.png';
 	//img3.style.margin='4px 0px';
 
-	img4.src='img./app.png';
-	img5.src='img./serwei.png';
-	img6.src='img./erwei.png';
+	img4.src='./img/app.png';
+	img5.src='./img/serwei.png';
+	img6.src='./img/erwei.png';
 	img5.style.margin='0px 10px';
 	img4.style.float='left';
 	img5.style.float='left';
 	img6.style.float='left';
   
-  	img7.src='img./cart.png';
+  	img7.src='./img/cart.png';
 	
 	fix.children[0].appendChild(img1);
 	fix.children[0].appendChild(img2);
