--- a/homepage.html
+++ b/homepage.html
@@ -137,14 +137,14 @@
 	<!-- 《------轮播图开始-------》 -->
 			<div class="box" id="box">
 				<div class="slider" id="slider">
-					<div class="slide"><img src="img./bann6.png" alt=""></div>
-					<div class="slide"><img src="img./bann1.jpeg" alt=""></div>
-					<div class="slide"><img src="img./bann2.jpeg" alt=""></div>
-					<div class="slide"><img src="img./bann3.jpeg" alt=""></div>
-					<div class="slide"><img src="img./bann4.jpeg" alt=""></div>
-					<div class="slide"><img src="img./bann5.jpeg" alt=""></div>
-					<div class="slide"><img src="img./bann6.png" alt=""></div>
-					<div class="slide"><img src="img./bann1.jpeg" alt=""></div>
+					<div class="slide"><img src="./img/bann6.png" alt=""></div>
+					<div class="slide"><img src="./img/bann1.jpeg" alt=""></div>
+					<div class="slide"><img src="./img/bann2.jpeg" alt=""></div>
+					<div class="slide"><img src="./img/bann3.jpeg" alt=""></div>
+					<div class="slide"><img src="./img/bann4.jpeg" alt=""></div>
+					<div class="slide"><img src="./img/bann5.jpeg" alt=""></div>
+					<div class="slide"><img src="./img/bann6.png" alt=""></div>
+					<div class="slide"><img src="./img/bann1.jpeg" alt=""></div>
 				</div>
 				<span id="left">
 					<div class="imgleft">
