--- a/details.html
+++ b/details.html
@@ -15,23 +15,23 @@
 		<div class="banner1">
 			<p class="sizep">帮5买，享帮帮</p>
 			<div class="imgbanner">
-				<img  src="img./common_min.png" style="position:relative;top:-28px;bottom:5px">
+				<img  src="./img/common_min.png" style="position:relative;top:-28px;bottom:5px">
 			</div>
 			<div class="imgbanner">
-				<img  src="img./common_min.png" style="position:relative;top:-50px;bottom:5px">
+				<img  src="./img/common_min.png" style="position:relative;top:-50px;bottom:5px">
 			</div>
 			<div class="imgbanner">
-				<img  src="img./common_min.png" style="position:relative;top:-72px;bottom:5px">
+				<img  src="./img/common_min.png" style="position:relative;top:-72px;bottom:5px">
 			</div>
 			<p class="sizep" style="width:41px;padding-top:6px;"><a style="color:#9a9791;" href=""> 登录 </a></p>
 			<p class="sizep" style="width:41px;padding-top:6px;"><a style="color:#9a9791;" href=""> 注册 </a></p>
 			<div class="imgbanner" style="margin:2px 2px 0px 0px ">
-				<img src="img./common_min.png" style="position:relative;top:-111px;bottom:5px">
+				<img src="./img/common_min.png" style="position:relative;top:-111px;bottom:5px">
 			</div>
 			<p class="sizep" style="width:45px;padding-top:6px; float:left">
 				<a style="color:#9a9791;" href=""> 消息 </a>
 			</p>
-			<img src="img./dingdan.jpg" style="margin-top:6px;float:left">
+			<img src="./img/dingdan.jpg" style="margin-top:6px;float:left">
 			<p class="sizep" style="width:64px;padding-top:6px; float:left">
 				<a style="color:#9a9791;" href=""> 我的订单 </a>
 			</p>
@@ -40,36 +40,36 @@
 			</p>
 			<p class="sizep" style="width:64px;padding-top:6px; float:left">
 				<a style="color:#9a9791;" href=""> 帮钻兑换 </a></p>
-			<img src="img./tp-my-phone.png" style="margin-top:6px;float:left">
+			<img src="./img/tp-my-phone.png" style="margin-top:6px;float:left">
 			<p class="sizep" style="width:55px;padding-top:6px; float:left">
 				<a style="color:#9a9791;" href=""> 手机版 </a></p>
 			<p class="sizep" style="width:55px;padding-top:6px; float:left">
 				<a style="color:#9a9791;" href=""> 帮5淘 </a></p>
 			<p class="sizep" style="width:55px;padding-top:6px; float:left">
 				<a style="color:#9a9791;" href=""> 客户服务 </a></p>
-			<img src="img./gouwuche.jpg" style="margin:6px 5px 2px 3px;float:left">	
+			<img src="./img/gouwuche.jpg" style="margin:6px 5px 2px 3px;float:left">	
 			<p class="sizep" style="width:45px;padding-top:6px; float:left">
 				<a style="color:#9a9791;" href=""> 购物车 </a></p>
 			<p style="padding-top:6px; color:#fe6c00;font-size:10px; font-weight:bold;float:left">0</p>
 
 			<div class="banner1-1">
-				<img src="img./logo_03.jpg" style="margin-top:10px;margin-right:108px;float:left;">
+				<img src="./img/logo_03.jpg" style="margin-top:10px;margin-right:108px;float:left;">
 				<div class="search" >
 					<input class="search2" type="text" value="输入商品网址或关键字，直通全网，块速帮5购！">
 					<button class="search1"> <a style="color:white; font-size: 17px;" href="">搜全网</a> </button>
 				</div>
 				<div class="banner1-2" style="border-right:0px">
 					<div class="imgbanner" style="margin-left:26px;">
-					<img  src="img./common_min.png" style="position:relative;top:-94px;bottom:5px ;"></div>
+					<img  src="./img/common_min.png" style="position:relative;top:-94px;bottom:5px ;"></div>
 					<p class="banner1-3">400-085-0505</p>
 				</div>
 				<div class="banner1-2" style="border-right:0px">
 					<div class="imgbanner" style="margin-left:26px;" >
-					<img  src="img./common_min.png" style="position:relative;top:-111px;bottom:5px ;"></div>
+					<img  src="./img/common_min.png" style="position:relative;top:-111px;bottom:5px ;"></div>
 					<p class="banner1-3">mc@b5m.com</p>
 				</div>
 				<div class="banner1-2" style="background-color:#fe6c00;border:1px solid #fe6c00;">
-					<img style="margin:15px 2px 0px 3px ;float:left;" src="img./wenhao.jpg">
+					<img style="margin:15px 2px 0px 3px ;float:left;" src="./img/wenhao.jpg">
 					<p style="margin:11px 0px;"><a style="color:white;font-size:14px;" href="">常见问题</a> </p>
 				</div>
 
@@ -110,11 +110,11 @@
 			<div class="body2">
 				<div id="box">
 					<div class='body2-1' style="margin-right:0px;" id="Simg1">
-						<img src="img./pp0.jpeg">				
+						<img src="./img/pp0.jpeg">				
 						<div id="slider"></div>
 					</div>
 					<div class='body2-1' style="z-index:1;margin-left:0px;position:absolute;left:409px;display:none" id="Simg2">
-						<img id="Bimg" src="img./pp0.jpeg" style="width:1230px;height:1230px;">
+						<img id="Bimg" src="./img/pp0.jpeg" style="width:1230px;height:1230px;">
 					</div>
 				</div>	
 				<div class='body2-2'>
@@ -151,7 +151,7 @@
 							<p style="float:left;">件 （库存<span style="font-weight:bold;">5</span>件）</p>
 						</div>
 						<div class="body2-14">
-							<img class="body2-14" src="img./oo_03.jpg">
+							<img class="body2-14" src="./img/oo_03.jpg">
 						</div>
 						<div class="body2-15">
 							<p style="float:left;margin-right:19px;font-size:14px;">您已选择</p>
@@ -164,21 +164,21 @@
 					</div>
 				</div>	
 				<div class="body2-9">
-					<img src="img./spanl.jpg">	
-					<img src="img./sp0.jpeg" id="img0">
-					<img src="img./sp1.jpeg" id="img1" style="margin-right:230px;">
-					<img src="img./spanr.jpg">				
+					<img src="./img/spanl.jpg">	
+					<img src="./img/sp0.jpeg" id="img0">
+					<img src="./img/sp1.jpeg" id="img1" style="margin-right:230px;">
+					<img src="./img/spanr.jpg">				
 				</div>		
 			</div>
 			<div class="body3">
-				<img src="img./ww_07.jpg">
+				<img src="./img/ww_07.jpg">
 			</div>
 			<img style="float:left;" src="img./a_07.jpg" style="margin:0 auto">
 		</div>
 	</div>
 	<div class="bottom">
 		<div class="bottom1">
-			<img style="float:left;" src="img./loginB.jpg">
+			<img style="float:left;" src="./img/loginB.jpg">
 			<div class="bottom1-1">
 				<div class="bottom1-2">
 					<li style="font-size:16px;color:black;">购物指南</li>
@@ -244,13 +244,13 @@
 				<p class="bottom2-2" style="margin-left:57px;">增值电信业务经营许可证：沪B2-20130065号 |中华人民共和国互联网药品信息服务资格证书（沪） -非经营性-2013-0034 沪卫（中医）网审【2015】10032号 沪ICP备1134776号-3 | 食品流通许可证：</p>
 				<p class="bottom2-2" style="margin-left:526px;margin-bottom:5px;">SP31011514103101755</p>
 				<div class="bottom3">
-					<img src="img./bo1.gif">
-					<img src="img./bo2.png">
-					<img src="img./bo3.gif">
-					<img src="img./bo4.png">
-					<img src="img./bo5.png">
-					<img src="img./bo6.png">
-					<img src="img./bo7.png">
+					<img src="./img/bo1.gif">
+					<img src="./img/bo2.png">
+					<img src="./img/bo3.gif">
+					<img src="./img/bo4.png">
+					<img src="./img/bo5.png">
+					<img src="./img/bo6.png">
+					<img src="./img/bo7.png">
 				</div>
 			</div>		
 		</div>		
@@ -258,7 +258,7 @@
 	<div class="masking" id="none">
 		<div class="masking1">
 			<p style="float:right;background-color:white;margin-top:10px;margin-right:10px;" id="none1" >x</p>
-			<img src="img./rr11_02.jpg">
+			<img src="./img/rr11_02.jpg">
 			<div class="body2-16" style="margin-top:0px;">
 				<button style="margin-left:26px;font-weight:bold" class="body2-17" >继续购物</button>
 				<button class="body2-17" style="font-weight:bold;margin-left:25px;background-color:#ff0754;color:white;"id="none2">去购物车结算</button>		
@@ -314,8 +314,8 @@
 
 	var img2=document.createElement('img');
 	var img3=document.createElement('img');
-	img2.src="img./pp0.jpeg" ;
-	img3.src="img./pp1.jpeg" ;
+	img2.src="./img/pp0.jpeg" ;
+	img3.src="./img/pp1.jpeg" ;
 	img0.onmouseover=function(){
 		Bimg.src="img./pp0.jpeg" 
 		img1.style.border='none';
@@ -325,7 +325,7 @@
 	}
 		
 	img1.onmouseover=function(){
-		Bimg.src="img./pp1.jpeg" 
+		Bimg.src="./img/pp1.jpeg" 
 		img0.style.border='none';
 		img1.style.border='2px solid #ff9003';
 		div0.removeChild(div0.firstElementChild);
@@ -340,7 +340,7 @@
 	var border2=document.getElementById('border2');
 	var p=document.getElementById('p');
 	var img4=document.createElement('img');
-	img4.src='img./duigou.png';
+	img4.src='./img/duigou.png';
 	img4.style.position='relative';
 	img4.style.left='38px';
 	img4.style.top='-20px';	
@@ -369,12 +369,6 @@
 			button1.style.cursor='pointer';
 		}
 	}
-	// button1.onmouseout=function(){
-	// 	button1.style.cursor='pointer';
-	// }
-	// button2.onmouseout=function(){
-	// 	button2.style.cursor='pointer';
-	// }
 	button2.onmouseover=function(){
 		if(number.value==5)
 		{
@@ -401,15 +395,7 @@
 		else if(number.value==5){
 			button2.style.cursor='not-allowed';
 		}
-	}
-	// number.value.onchange=function(){
-	// 	if(number.value==1){
-	// 		button1.style.cursor='not-allowed';
-	// 	}
-	// 	else if(number.value==4){
-	// 		button2.style.cursor='not-allowed';
-	// 	}
-	// }
+	}		
 //------------------蒙罩消失及出现---------------------//
 	var none=document.getElementById('none');
 	var none1=document.getElementById('none1');
