--- a/details.html
+++ b/details.html
@@ -10,7 +10,6 @@
 	</style>
 </head>
 <body>
-	<!-- <img style="width:19px;height:19px;background:url(img./common_min.png) 0 -53px; " href="">		 -->	
 	<div class="banner">
 		<div class="banner1">
 			<p class="sizep">帮5买，享帮帮</p>
@@ -99,7 +98,7 @@
 			<li  class="title1-1" ><a href="">食品保健</a></li>
 			<li  class="title1-1" ><a href="">韩国直邮</a></li>
 			<li  class="title1-1" ><a href="">跨境购</a></li>
-			<img style="margin-left:30px;" src="img./ff_03.jpg">
+			<img style="margin-left:30px;" src="./img/ff_03.jpg">
 		</div>
 	</div>
 	<div class="body">
@@ -173,7 +172,7 @@
 			<div class="body3">
 				<img src="./img/ww_07.jpg">
 			</div>
-			<img style="float:left;" src="img./a_07.jpg" style="margin:0 auto">
+			<img style="float:left;" src="./img/a_07.jpg" style="margin:0 auto">
 		</div>
 	</div>
 	<div class="bottom">
@@ -226,7 +225,7 @@
 					<li><a href="">帮5淘插件</a></li>
 					<li><a href="">其他</a></li>
 				</div>
-				<img src="img./erweima.jpg" style="float:left;">
+				<img src="./img/erweima.jpg" style="float:left;">
 			</div>
 			<div class="bottom2">
 				<div class="bottom2-1">
@@ -410,6 +409,6 @@
 	none2.onclick=function(){
 		none.style.display='none';
 	}
-	//
+	//图片分割技术 <img style="width:19px;height:19px;background:url(img./common_min.png) 0 -53px; " href="">			
 </script>
 </html>
