--- a/details.html
+++ b/details.html
@@ -259,7 +259,7 @@
 			<p style="float:right;background-color:white;margin-top:10px;margin-right:10px;" id="none1" >x</p>
 			<img src="./img/rr11_02.jpg">
 			<div class="body2-16" style="margin-top:0px;">
-				<button style="margin-left:26px;font-weight:bold" class="body2-17" >继续购物</button>
+				<button style="margin-left:26px;font-weight:bold" class="body2-17" id="none3" >继续购物</button>
 				<button class="body2-17" style="font-weight:bold;margin-left:25px;background-color:#ff0754;color:white;"id="none2">去购物车结算</button>		
 			</div>
 		</div>
@@ -407,6 +407,9 @@
 		none.style.display='none';
 	}
 	none2.onclick=function(){
+		none.style.display='none';
+	}
+	none3.onclick=function(){
 		none.style.display='none';
 	}
 	//图片分割技术 <img style="width:19px;height:19px;background:url(img./common_min.png) 0 -53px; " href="">			
