--- a/homepage.html
+++ b/homepage.html
@@ -268,7 +268,7 @@
 					<li><a href="">帮5淘插件</a></li>
 					<li><a href="">其他</a></li>
 				</div>
-				<img src="img./erweima.jpg" style="float:left;">
+				<img src="./img/erweima.jpg" style="float:left;">
 			</div>
 			<div class="bottom2">
 				<div class="bottom2-1">
